--- a/src/Pages/Income.css
+++ b/src/Pages/Income.css
@@ -22,3 +22,52 @@
     align-items: center;
     padding: 10px;
 }
+
+.tax-initial{
+    display: grid;
+    grid-template-columns: auto auto;
+    text-align: left;
+    column-gap: 2px;
+    row-gap: 1px;
+}
+
+.heading{
+    font-size: 13px;
+    font-weight: 700;
+    border: 1px solid black;
+    background-color: rgb(238, 236, 236);
+    margin: 0;
+}
+
+.heading-d{
+    font-size: 13px;
+    font-weight: 700;
+    border: 1px solid black;
+    background-color: rgb(238, 236, 236);
+    margin: 0;
+    width: 55vw;
+}
+
+.detail-text{
+    font-size: 13px;
+    border: 1px solid black;
+    background-color: rgb(238, 236, 236);
+    padding: 0;
+    margin: 0;
+    width: 20vw;
+    text-align: right;
+}
+
+.detail-text-d{
+    font-size: 13px;
+    border: 1px solid black;
+    background-color: rgb(238, 236, 236);
+    padding: 0;
+    margin: 0;
+    width: 55vw;
+}
+
+.introduc{
+    font-size: 14px;
+    font-weight: 700;
+}
